--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
 @import '@fontsource/fira-mono';
 
-:root {
+/* :root {
 	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
@@ -104,4 +104,4 @@ button:focus:not(:focus-visible) {
 	h1 {
 		font-size: 2.4rem;
 	}
-}
+} */
